kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: homework
spec:
  type: ClusterIP
  selector:
    app: nginx

  ports:
  - protocol: TCP
    port: 80 # Port the service exposes
    targetPort: nginxport
